# CodeDepth

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  ci_cd.yml  release.yml  summarize_pr_diff.yml  test.yml
src/: graph_util.rs  hashable_call_hierarchy_item.rs  json_rpc.rs  lib.rs  main.rs
src/lsp/: json_rpc.rs  lsp_client.rs  mod.rs
src/lsp_client/: json_rpc.rs  lsp_client.rs  mod.rs
tests/: integration_tests.rs
tests/jdtls/: main.rs
tests/jdtls/sample_java_project/: pom.xml
tests/jdtls/sample_java_project/src/main/java/sample/: App.java  OtherFile.java
tests/rust_analyzer/: main.rs
tests/rust_analyzer/sample_rust_project/: Cargo.toml
tests/rust_analyzer/sample_rust_project/src/: main.rs  other_file.rs
