[package]
name = "code_depth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
log = "0.4.17"
lsp-types = "0.93.2"
petgraph = "0.6.2"
regex = "1.6.0"
serde = "1.0.147"
serde_json = { version = "1.0.87", features = ["preserve_order"] }
simple_logger = "4.0.0"
tokio = { version = "1.21.2", features = [
    "process",
    "macros",
    "rt",
    "io-util",
    "sync",
] }
